# kube-claw

./: .adk-claw.yaml  .cruft.json  .pre-commit-config.yaml  AGENTS.md  BOOTSTRAP.md  HEARTBEAT.md  IDENTITY.md  README.md  SOUL.md  USER.md  pyproject.toml  requirements_dev.txt
.agents/skills/developer/: SKILL.md
.agents/skills/openclaw-bootstrap/: SKILL.md
.agents/skills/scruft-project-init/: SKILL.md
.github/workflows/: lint.yaml  pages.yaml  publish.yaml  test.yaml
adk_claw/: __init__.py  config.py  memory.py  workspace_init.py
adk_claw/binding/: fakes.py  sqlite.py  table.py
adk_claw/gateway/: __init__.py  discord.py  github.py
adk_claw/host/: host.py
adk_claw/host/queue/: lane.py  manager.py
adk_claw/mcp/: memory_tool.py
adk_claw/orchestrator/: base.py  embedded.py
adk_claw/runtime/: __init__.py  embedded.py  mcp_support.py
docs/: ARCHITECTURAL_QUESTIONS.md  CLAW_CORE_ARCHITECTURE.md  CORE_V3_SPECIFICATION.md  README.md  SCENARIO_MULTI_PROJECT_FIX.md  TODO.md  claw_design_survey.md  deep-research.md  plan.md  research.md  worker-host-interface.md
docs/archive/: TODO.md
docs/decisions/: 002-modular-isolation.md  ADR-001-A2A-Protocol.md  ADR-003-hybrid-mcp-a2a-tooling.md  ADR-004-embedded-executor.md
docs/design/: 005-message-queuing-and-streaming.md  CORE_V3_SPECIFICATION.md
docs/research/: A2A_SURVEY_SUMMARY.md  WORKSPACE_ISOLATION.md  claw_design_survey.md  research.md
docs/use-cases/: SCENARIO_HEALTH_AGENT.md  SCENARIO_MULTI_PROJECT_FIX.md  SCENARIO_ROBOROCK_MAINTAINER.md
kube_claw/: __init__.py  agent.py  main.py
kube_claw/binding/: fakes.py  sqlite.py  table.py
kube_claw/core/: base.py  identity.py  system_instruction.md
kube_claw/domain/: models.py
kube_claw/gateway/: __init__.py
kube_claw/host/: host.py
kube_claw/mcp/: __init__.py  server.py  transport.py
kube_claw/orchestrator/: __init__.py  base.py  embedded.py  orchestrator.py
kube_claw/sandbox/: fakes.py  local.py
kube_claw/v1_legacy/: agent.py  main.py
kube_claw/worker/: entrypoint.py  executor.py
reports/repo-health/: SUMMARY.md
script/: discord_bot.py  github_bot.py  local_tui.py  run-ty.sh  test
scripts/: repo_health.py  stress_test.py
tests/: __init__.py  test_basic.py  test_config.py  test_memory.py  test_workspace_init.py
tests/binding/: test_binding_fakes.py
tests/gateway/: test_discord.py  test_discord_cancel.py  test_github.py  test_progress_tracker.py
tests/host/: test_host.py
tests/infrastructure/: test_local_sandbox.py
tests/mcp/: test_server.py
tests/orchestrator/: test_embedded.py
tests/runtime/: __init__.py  test_env_injection.py  test_persistence.py
tests/sandbox/: test_local.py  test_sandbox_fakes.py
tests/worker/: test_executor.py
(+62 files in other folders)
