[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=77.0"]

[project]
name = "kube_claw"
version = "0.0.1"
license = "Apache-2.0"
license-files = ["LICENSE"]
description = "A Kubernetes claw for managing resources"
readme = "README.md"
authors = [{ name = "Allen Porter", email = "allen.porter@gmail.com" }]
requires-python = ">=3.14"
classifiers = []
dependencies = [
    "aioconsole>=0.8.2",
    "discord-py>=2.3.0",
    "google-adk>=1.5.0",
    "kubernetes>=35.0.0",
    "pydantic>=2.12.5",
    "a2a-sdk>=0.3.24",
    "uvicorn>=0.41.0",
    "starlette>=0.52.1",
    "mcp>=1.26.0",
    "aiosqlite>=0.22.1",
]

[project.urls]
Source = "https://github.com/allenporter/kube_claw"

[tool.setuptools.packages.find]
include = ["kube_claw*"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
filterwarnings = [
    "ignore:'asyncio.DefaultEventLoopPolicy' is deprecated:DeprecationWarning:aioconsole.events",
]
