[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=77.0"]

[project]
name = "adk_claw"
version = "0.0.1"
license = "Apache-2.0"
license-files = ["LICENSE"]
description = "A Claw based on Google Agent Development Kit (ADK)"
readme = "README.md"
authors = [{ name = "Allen Porter", email = "allen.porter@gmail.com" }]
requires-python = ">=3.14"
classifiers = []
dependencies = [
    "adk-coder==0.1.0",
    "aioconsole>=0.8.2",
    "discord-py>=2.3.0",
    "google-adk>=1.25.1",
    "pydantic>=2.12.5",
    "mcp>=1.26.0",
    "aiosqlite>=0.22.1",
]

[project.urls]
Source = "https://github.com/allenporter/adk_claw"

[tool.setuptools.packages.find]
include = ["adk_claw*"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
filterwarnings = [
    "ignore:'asyncio.DefaultEventLoopPolicy' is deprecated:DeprecationWarning:aioconsole.events",
]
